--- a/src/client/style/articles.css
+++ b/src/client/style/articles.css
@@ -1,6 +1,3 @@
-
-@media all and (max-width:767px) { .container-block { padding: 11% 8% } }
-
 .container-flexbox {
   display: flex;
   justify-content: flex-start;
@@ -10,10 +7,11 @@
 
 /* Desktops*/
 @media all and (min-width: 768px) {
-  .item-col-3 { width: 30%; margin: 1.6%;}
+  .item-col-3 { width: 30.1%; margin: 1.6%;}
 }
 
 /* Mobiles */
 @media all and (max-width: 767px) {
   .item-col-3 { width: 100% }
+  .container-block { padding: 11% 8% }
 }
